# llvm-project

./: .gitignore  .pre-commit-config.yaml
.github/workflows/: buildAndTest.yml
clang/lib/CodeGen/: BackendUtil.cpp
llvm/examples/Bye/: Bye.cpp
llvm/include/llvm/Analysis/: FunctionAnnotation.h  FunctionPropertiesAnalysis.h  MLPassPipelinePredictor.h
llvm/include/llvm/Analysis/ML/: FunctionPropertiesAnalysis.h
llvm/include/llvm/CodeGen/: MachinePassManager.h
llvm/include/llvm/IR/: Function.h  PassManager.h
llvm/include/llvm/Passes/: OptimizationLevel.h  PassBuilder.h
llvm/include/llvm/Transforms/Utils/: FunctionAnnotation.h
llvm/lib/Analysis/: CGSCCPassManager.cpp  CMakeLists.txt  FunctionAnnotation.cpp  FunctionPropertiesAnalysis.cpp  MLPassPipelinePredictor.cpp
llvm/lib/Analysis/FunctionPropertiesAnalysisInstrumentation/: FunctionPropertiesAnalysisPassInstrument.cpp
llvm/lib/Analysis/ML/: CMakeLists.txt  FunctionPropertiesAnalysis.cpp
llvm/lib/Analysis/ML/FunctionPropertiesAnalysisInstrumentation/: FunctionPropertiesAnalysisPassInstrument.cpp
llvm/lib/Analysis/PMTest/: CMakeLists.txt  PMTest.cpp  lookuptable.csv
llvm/lib/CodeGen/: MachinePassManager.cpp
llvm/lib/IR/: Function.cpp  PassManager.cpp
llvm/lib/LTO/: LTOBackend.cpp
llvm/lib/Passes/: PassBuilder.cpp  PassRegistry.def
llvm/lib/Transforms/Scalar/: LoopPassManager.cpp
llvm/lib/Transforms/Utils/: CMakeLists.txt  FunctionAnnotation.cpp
llvm/test/Analysis/ML/FunctionPropertiesAnalysis/: matmul.ll
llvm/tools/opt/: NewPMDriver.cpp
llvm/unittests/Analysis/ML/: FunctionPropertiesAnalysisTest.cpp
mlir/include/: malloc_count.h
mlir/include/mlir/: InitAllDialects.h  InitAllPasses.h
mlir/include/mlir/Analysis/: AffineStructures.h
mlir/include/mlir/Analysis/Presburger/: AlignedAllocator.h  Coalesce-impl.h  Coalesce.h  Constraint.h  Expr.h  Fraction.h  ISLPrinter-impl.h  ISLPrinter.h  LinearTransform-impl.h  LinearTransform.h  Matrix-impl.h  Matrix.h  ParamLexSimplex-impl.h  ParamLexSimplex.h  Presburger-impl.h  PresburgerBasicSet-impl.h  PresburgerBasicSet.h  Printer-impl.h  Printer.h  PwExpr.h  SafeInteger.h  Set-impl.h  Set.h  Simplex-impl.h  Simplex.h  TransprecSet.h  perf_event_open.h
mlir/include/mlir/Conversion/: Passes.td
mlir/include/mlir/Conversion/PresburgerToStandard/: PresburgerToStandard.h
mlir/include/mlir/Dialect/: CMakeLists.txt
mlir/include/mlir/Dialect/Presburger/: Attributes.h  CMakeLists.txt  Parser-impl.h  Parser.h  Passes.h  Passes.td  PresburgerDialect.h  PresburgerDialect.td  PresburgerOps.h  PresburgerOps.td  PresburgerOptions.h  Set.h  Types.h
mlir/include/mlir/Dialect/Presburger/IR/: PresburgerExpr.h
mlir/include/mlir/Dialect/Presburger/Transforms/: CMakeLists.txt  CanonicalizationPatterns.td  EvaluationPatterns.td  Transforms.td
mlir/include/mlir/IR/: Diagnostics.h
mlir/include/mlir/Transforms/: Passes.h
mlir/lib/Analysis/: AffineStructures.cpp  CMakeLists.txt  LinearTransformFlatAffineConstraints.cpp
mlir/lib/Analysis/Presburger/: CMakeLists.txt  Coalesce.cpp  Expr.cpp  ISLPrinter.cpp  LinearTransform.cpp  Matrix.cpp  ParamLexSimplex.cpp  PresburgerBasicSet.cpp  Printer.cpp  PwExpr.cpp  Set.cpp  Simplex.cpp
mlir/lib/Conversion/: CMakeLists.txt
mlir/lib/Conversion/PresburgerToStandard/: CMakeLists.txt  PresburgerToStandard.cpp
mlir/lib/Dialect/: CMakeLists.txt
mlir/lib/Dialect/Presburger/: Attributes.cpp  CMakeLists.txt  Parser.cpp  PresburgerDialect.cpp  PresburgerOps.cpp  PresburgerOptions.cpp  Set.cpp  Types.cpp
mlir/lib/Dialect/Presburger/IR/: PresburgerExpr.cpp
mlir/lib/Dialect/Presburger/Transforms/: Canonicalization.cpp  Evaluation.cpp  PassDetail.h  Transforms.cpp
mlir/lib/Support/: MlirOptMain.cpp
mlir/test/Conversion/PresburgerToStandard/: convert-presburger-to-standard.mlir
mlir/test/Dialect/Presburger/: apply.mlir  coalesce.mlir  complement.mlir  contains.mlir  eliminate_ex.mlir  empty.mlir  equal.mlir  expr.mlir  intersect.mlir  intersect_invalid.mlir  invalid_ir.mlir  pwExpr.mlir  set.mlir  set_invalid.mlir  union.mlir  union_invalid.mlir
mlir/test/Dialect/Presburger/Coalesce/: coalesceBenchmark0.test  coalesceBenchmark1.test  coalesceBenchmark10.test  coalesceBenchmark100.test  coalesceBenchmark1000.test  coalesceBenchmark10000.test  coalesceBenchmark10001.test  coalesceBenchmark10002.test  coalesceBenchmark10003.test  coalesceBenchmark10004.test  coalesceBenchmark10005.test  coalesceBenchmark10006.test  coalesceBenchmark10007.test  coalesceBenchmark10008.test  coalesceBenchmark10009.test  coalesceBenchmark1001.test  coalesceBenchmark10010.test  coalesceBenchmark10011.test  coalesceBenchmark10012.test  coalesceBenchmark10013.test  coalesceBenchmark10014.test  coalesceBenchmark10015.test  coalesceBenchmark10016.test  coalesceBenchmark10017.test  coalesceBenchmark10018.test  coalesceBenchmark10019.test  coalesceBenchmark1002.test  coalesceBenchmark10020.test  coalesceBenchmark10021.test  coalesceBenchmark10022.test  coalesceBenchmark10023.test  coalesceBenchmark10024.test  coalesceBenchmark10025.test  (+10029 more)
mlir/tools/: CMakeLists.txt
mlir/tools/mlir-opt/: CMakeLists.txt  mlir-opt.cpp
mlir/tools/presburgerc/: CMakeLists.txt  presburgerc.cpp
mlir/tools/run-presburger/: CMakeLists.txt  run-presburger.cpp
mlir/tools/run-presburger-cache/: CMakeLists.txt  run-presburger-cache.cpp
mlir/tools/run-presburger-hw/: CMakeLists.txt  run-presburger-hw.cpp
mlir/tools/run-presburger-mallocs/: CMakeLists.txt  malloc_count.c  run-presburger-mallocs.cpp
mlir/unittests/Analysis/: AffineStructuresTest.cpp
mlir/unittests/Analysis/Presburger/: CMakeLists.txt  CoalesceTest.cpp  MatrixTest.cpp  ParamLexSimplexTest.cpp  SetTest.cpp  SimplexTest.cpp
polly/lib/Support/: RegisterPasses.cpp
(+3 files in other folders)
